[gd_scene load_steps=44 format=3 uid="uid://xwwpba04pbj4"]

[ext_resource type="Script" path="res://Game/MainframeMover.gd" id="1_jco4c"]
[ext_resource type="Script" path="res://Game/Ice/Sentry.gd" id="1_s8n8a"]
[ext_resource type="PackedScene" uid="uid://dfqylyvtdl3do" path="res://GenericPrefabs/EntityStatus.tscn" id="2_2r0uj"]
[ext_resource type="Script" path="res://Game/Ice/SentryMind.gd" id="2_cc7e5"]
[ext_resource type="Texture2D" uid="uid://cywifay0lfcmq" path="res://Textures/Skull.png" id="3_eo0qx"]
[ext_resource type="Script" path="res://Scripts/OnTrigger/DeleteSelf.gd" id="3_rp1x0"]
[ext_resource type="Script" path="res://Scripts/AnimatedSprite2D.gd" id="4_8b5v4"]
[ext_resource type="Texture2D" uid="uid://bocm4ao03u5b6" path="res://Textures/MainframeObj.png" id="5_lrfk4"]
[ext_resource type="Script" path="res://Scripts/OnTrigger/DealDamage.gd" id="6_tvfqk"]
[ext_resource type="Script" path="res://Scripts/OnTrigger/PlaysoundOnTrigger.gd" id="7_ptjub"]
[ext_resource type="AudioStream" uid="uid://dd6arj43wrxsw" path="res://Sounds/SentryAttack.mp3" id="8_2yra7"]
[ext_resource type="Texture2D" uid="uid://5wt6lnh6b41g" path="res://Textures/Skull_Attacks.png" id="9_ka2bt"]
[ext_resource type="Script" path="res://Scripts/OnTrigger/PlayAnimation.gd" id="11_2w0im"]
[ext_resource type="Script" path="res://Scripts/AnimationPlayer.gd" id="14_2604y"]
[ext_resource type="Shader" path="res://Shaders/MovementGlitch.gdshader" id="15_jtxtx"]
[ext_resource type="Script" path="res://Scripts/target_move_animation.gd" id="16_0oia1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l2htv"]
atlas = ExtResource("5_lrfk4")
region = Rect2(64, 0, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_nim48"]
atlas = ExtResource("9_ka2bt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3mro"]
atlas = ExtResource("9_ka2bt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irf0e"]
atlas = ExtResource("9_ka2bt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw6cl"]
atlas = ExtResource("9_ka2bt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2hqp"]
atlas = ExtResource("9_ka2bt")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hetbs"]
atlas = ExtResource("9_ka2bt")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y50lc"]
atlas = ExtResource("9_ka2bt")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g1nf"]
atlas = ExtResource("9_ka2bt")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5ygf"]
atlas = ExtResource("9_ka2bt")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs8lx"]
atlas = ExtResource("9_ka2bt")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yya7l"]
atlas = ExtResource("3_eo0qx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urth8"]
atlas = ExtResource("3_eo0qx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkvfm"]
atlas = ExtResource("3_eo0qx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca7de"]
atlas = ExtResource("3_eo0qx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrtr7"]
atlas = ExtResource("3_eo0qx")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgath"]
atlas = ExtResource("3_eo0qx")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hmny"]
atlas = ExtResource("3_eo0qx")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvciu"]
atlas = ExtResource("3_eo0qx")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vlvdx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nim48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3mro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irf0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw6cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2hqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hetbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y50lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g1nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5ygf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs8lx")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_yya7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urth8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkvfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca7de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrtr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgath")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hmny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvciu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_l42c0"]
domain_warp_enabled = true
domain_warp_type = 2
domain_warp_amplitude = 111.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_deh7u"]
seamless_blend_skirt = 1.0
noise = SubResource("FastNoiseLite_l42c0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_08b11"]
shader = ExtResource("15_jtxtx")
shader_parameter/offset = 0.0
shader_parameter/Arg = 3.25988e-09
shader_parameter/Mix = 1.0
shader_parameter/DisplaceTexture = SubResource("NoiseTexture2D_deh7u")

[sub_resource type="Animation" id="Animation_ylphu"]
resource_name = "Moved"

[sub_resource type="Animation" id="Animation_ljtq2"]
resource_name = "Premove"
length = 0.7
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/Arg")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [3.25988e-09, 0.05, 3.25988e-09]
}

[sub_resource type="Animation" id="Animation_c8004"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/Arg")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.25988e-09]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y546u"]
_data = {
"Moved": SubResource("Animation_ylphu"),
"Premove": SubResource("Animation_ljtq2"),
"RESET": SubResource("Animation_c8004")
}

[node name="Sentry" type="Node2D"]
z_index = 5
z_as_relative = false
script = ExtResource("1_s8n8a")

[node name="Mover" type="Node" parent="." node_paths=PackedStringArray("Host", "ES")]
script = ExtResource("1_jco4c")
Host = NodePath("..")
Dense = true
ES = NodePath("EntityStatus")

[node name="EntityStatus" parent="Mover" instance=ExtResource("2_2r0uj")]
MaxHits = 1
CurrentHits = 1

[node name="DeleteSelf" type="Node" parent="Mover/EntityStatus" node_paths=PackedStringArray("target")]
script = ExtResource("3_rp1x0")
target = NodePath("../../..")

[node name="SimpleMind" type="Node" parent="Mover" node_paths=PackedStringArray("MM", "AttackTimeout")]
script = ExtResource("2_cc7e5")
MM = NodePath("..")
AttackTimeout = NodePath("AttackTimeout")

[node name="ThinkingCycle" type="Timer" parent="Mover/SimpleMind"]
wait_time = 0.75
autostart = true

[node name="ScanSprite" type="Sprite2D" parent="Mover/SimpleMind"]
visible = false
texture = SubResource("AtlasTexture_l2htv")

[node name="AttackTimeout" type="Timer" parent="Mover/SimpleMind"]
one_shot = true

[node name="DealDamage" type="Node" parent="Mover/SimpleMind/AttackTimeout"]
script = ExtResource("6_tvfqk")

[node name="PlaySound" type="Node" parent="Mover/SimpleMind/AttackTimeout" node_paths=PackedStringArray("Host")]
script = ExtResource("7_ptjub")
sound = ExtResource("8_2yra7")
Host = NodePath("../../../..")
volume = -5.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
z_index = 2
z_as_relative = false
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_vlvdx")
script = ExtResource("4_8b5v4")
AutoplayAnimation = true

[node name="PlayAnimation" type="Node" parent="AnimatedSprite2D" node_paths=PackedStringArray("animator")]
script = ExtResource("11_2w0im")
animator = NodePath("..")
animation = "attack"

[node name="ColorRect" type="ColorRect" parent="AnimatedSprite2D"]
material = SubResource("ShaderMaterial_08b11")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D/ColorRect"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_y546u")
}
script = ExtResource("14_2604y")

[node name="TargetMoveAnimation" type="Node2D" parent="."]
script = ExtResource("16_0oia1")

[node name="Polygon2D" type="Polygon2D" parent="TargetMoveAnimation"]
color = Color(1, 0, 0, 0.796078)
polygon = PackedVector2Array(-16, 0, 0, -16, 16, 0, 0, 16)

[connection signal="AnimateFinishMovement" from="Mover" to="AnimatedSprite2D/ColorRect/AnimationPlayer" method="_on_mover_animate_finish_movement"]
[connection signal="AnimatePreMovement" from="Mover" to="AnimatedSprite2D/ColorRect/AnimationPlayer" method="_on_mover_animate_pre_movement"]
[connection signal="Death" from="Mover/EntityStatus" to="Mover/EntityStatus/DeleteSelf" method="_on_entity_status_death"]
[connection signal="Attack" from="Mover/SimpleMind" to="Mover/SimpleMind/AttackTimeout/DealDamage" method="_on_simple_mind_attack"]
[connection signal="Attack" from="Mover/SimpleMind" to="Mover/SimpleMind/AttackTimeout/PlaySound" method="_on_simple_mind_attack"]
[connection signal="Attack" from="Mover/SimpleMind" to="AnimatedSprite2D/PlayAnimation" method="_on_simple_mind_attack"]
[connection signal="timeout" from="Mover/SimpleMind/ThinkingCycle" to="Mover/SimpleMind" method="_on_timer_timeout"]
[connection signal="timeout" from="Mover/SimpleMind/AttackTimeout" to="Mover/SimpleMind" method="_on_attack_timeout_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D/PlayAnimation" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="AnimationEnded" from="AnimatedSprite2D/PlayAnimation" to="AnimatedSprite2D" method="_on_play_animation_animation_ended"]
